# multigit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FLOW.md  CHANGELOG.md  COMMAND_ALIAS.md  CONTRIBUTING.md  CONVENTIONAL_COMMIT_GUIDE.md  Cargo.toml  FEATURES_SUMMARY.md  LICENSE  Makefile  QUICK_TEST_GUIDE.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES_v2.0.0.md  SECURITY_FIXES_SUMMARY.md  SESSION_SUMMARY.md  VERIFICATION_GUIDE.md  VERIFICATION_RESULTS.md  devto.md  prompt.md  tasklist.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  release.yml  security.yml  test.yml
.multigit/: config.toml
coverage/: cobertura.xml
docs/: EASY_SETUP_GUIDE.md  FIXES_APPLIED.md  RE-RELEASE_INSTRUCTIONS.md  RELEASE.md  SETUP_IMPROVEMENTS.md  USER_GUIDE.md  diagrams.md  project.md
examples/: basic_usage.rs  scheduler_example.rs  ui_formatting.rs
scripts/: README.md  RUN_MULTI_REMOTE_TEST.sh  build-release.sh  install-windows.sh  install.ps1  install.sh  verify.sh
src/: lib.rs  main.rs
src/api/: client.rs  mod.rs  rate_limiter.rs  retry.rs
src/cli/: interactive.rs  mod.rs  parser.rs
src/core/: auth.rs  config.rs  conflict_resolver.rs  health_checker.rs  mod.rs  sync_manager.rs
src/daemon/: mod.rs  scheduler.rs  service.rs
src/git/: branch.rs  mod.rs  operations.rs  remote.rs
src/models/: config.rs  mod.rs  remote.rs  repository.rs  sync_state.rs
src/providers/: bitbucket.rs  codeberg.rs  factory.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  traits.rs
src/security/: audit.rs  encryption.rs  keyring.rs  mod.rs
src/ui/: conflict_resolver.rs  formatter.rs  mod.rs  progress.rs  sync_monitor.rs  tui.rs
src/utils/: error.rs  logger.rs  mod.rs  redact.rs  validation.rs
tests/: test_runner.rs
tests/fixtures/: mod.rs
tests/integration/: cli_tests.rs  git_operations_tests.rs  mod.rs  workflow_tests.rs
tests/unit/: auth_tests.rs  config_tests.rs  daemon_tests.rs  error_tests.rs  formatter_tests.rs  git_ops_tests.rs  mod.rs  models_tests.rs  provider_tests.rs  scheduler_tests.rs  security_tests.rs  sync_manager_tests.rs  ui_tests.rs
(+33 files in other folders)
