[package]
name = "multigit"
version = "2.0.0"
edition = "2021"
authors = ["TIVerse Team <team@tiverse.dev>"]
description = "Production-ready multi-remote Git synchronization tool - push, pull, and sync across GitHub, GitLab, Bitbucket, Codeberg, and Gitea"
homepage = "https://github.com/TIVerse/multigit"
repository = "https://github.com/TIVerse/multigit"
readme = "README.md"
license = "MIT"
keywords = ["git", "cli", "sync", "multi-remote"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

# Binary definitions - both 'multigit' and 'mg' use the same code
[[bin]]
name = "multigit"
path = "src/main.rs"

[[bin]]
name = "mg"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Git operations
git2 = { version = "0.20", features = ["vendored-libgit2"] }

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# API & Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Security
keyring = "2.2"
age = "0.10"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TUI
ratatui = "0.28"
crossterm = "0.29"
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
dirs = "5.0"
sled = "0.34"

# Unix signals (for daemon)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
